kubernetes/monitoring/main/kube-prometheus-stack/prometheus.authorizationpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/security.istio.io/authorizationpolicy_v1.json
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: kube-prometheus-stack-prometheus-authentik-policy
spec:
  selector:
    matchLabels:
      app: kube-prometheus-stack-prometheus
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: local
  action: CUSTOM
  provider:
    name: authentik
  rules:
    - to:
        - operation:
            hosts:
              - "alertmanager.*"
